fixed scrollbar colors

--- a/Online-Messaging-App/src/styles.scss
+++ b/Online-Messaging-App/src/styles.scss
@@ -37,7 +37,7 @@ body {
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px var(--soft-black) !important;
     border-radius: 0.5px;
-    background: var(--soft-black);
+    background: var(--scroll-background);
 }
 
 /* Handle */
@@ -66,6 +66,7 @@ body {
     --element-color: #ffffff;
     --hover-color: #3f3f3f;
     --element-hover-color: #f5f5f5;
+    --scroll-background: #d1d1d1;
 }
 
 * {
